--- a/examples/folding_example.ipynb
+++ b/examples/folding_example.ipynb
@@ -442,7 +442,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "cambio X"
+   ]
   },
   {
    "cell_type": "code",
