--- a/examples/explore_data.ipynb
+++ b/examples/explore_data.ipynb
@@ -84,14 +84,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot the trace (8 channels) with its corresponding -true- segmentation"
+    "### Plot the trace (8 channels) with its corresponding -true- segmentation\n",
+    "Notice that the \"BG\" class indicates the presence of an event (when 0) or not (when 1). Only the corresponding class of the event is activated (value of 1) when the event is present, and turns back to 0 when it is no longer there."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the \"BG\" class indicates the presence of an event (when 0) or not (when 1). Only the corresponding class of the event is activated (value of 1) when the event is present, and turns back to 0 when it is no longer there."
+    "Volcano-Tectonic (VT) example:"
    ]
   },
   {
@@ -112,7 +113,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['VT'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -121,6 +122,13 @@
     "                        dpi=100,\n",
     "                        figsize=(10, 6),\n",
     "                        font_size=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Long-Period (LP) example:"
    ]
   },
   {
@@ -141,7 +149,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['LP'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -150,6 +158,13 @@
     "                        dpi=100,\n",
     "                        figsize=(10, 6),\n",
     "                        font_size=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tremor (TR) example:"
    ]
   },
   {
@@ -170,7 +185,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['TR'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -179,6 +194,13 @@
     "                        dpi=100,\n",
     "                        figsize=(10, 6),\n",
     "                        font_size=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avalanche (AV) example:"
    ]
   },
   {
@@ -199,7 +221,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['AV'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -208,6 +230,13 @@
     "                        dpi=100,\n",
     "                        figsize=(10, 6),\n",
     "                        font_size=9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ice-Quake (IC) example:"
    ]
   },
   {
@@ -228,7 +257,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['IC'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -238,13 +267,6 @@
     "                        figsize=(10, 6),\n",
     "                        font_size=9)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
