--- a/examples/folding_procedure.ipynb
+++ b/examples/folding_procedure.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Folding/Unfolding procedure demonstration"
+    "# Folding procedure demonstration"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook is meant to demonstrate the processes of Folding/Unfolding that convert multi channel 1D arrays into 2D images, suitable for Semantic Segmentation Models."
+    "This Notebook is meant to demonstrate the *Folding* process that convert multi channel 1D arrays into 2D images, suitable for Semantic Segmentation Models."
    ]
   },
   {
@@ -101,7 +101,7 @@
    ],
    "source": [
     "example_trace = np.load(example_data['VT'])\n",
-    "data_utils.print_trace(example_trace,\n",
+    "data_utils.plot_trace(example_trace,\n",
     "                        n_stations=8,\n",
     "                        save_path=None,\n",
     "                        save=False,\n",
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see a compressed representation of the target arrays. Notice that the Background class (0) is 1 when there is no event, and 0 when an event appears. The corresponding class (in this case, 3) is set to 1 during the event's duration. The rest remain 0."
+    "We can see a compressed representation of the target arrays. Notice that the Background class (0) is 1 when there is no event, and 0 when an event appears. The corresponding class (in this case, 1) is set to 1 during the event's duration. The rest remain 0."
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To train our models we require 2D targets, this is again obtained through folding. The main difference here is that we generate 6 masks (one per class) and that we have to repeat our 1D label through the 8 stations."
+    "To train our models we require 2D targets, this is again obtained through folding. The main difference here is that we generate 6 masks (one per class) and that we have to repeat our 1D label through the 8 stations (we are not interested in station-specific predictions, only time)."
    ]
   },
   {
@@ -317,7 +317,7 @@
    "source": [
     "output_tensor = tensor(output_labels)\n",
     "print(\"before repetition\", output_tensor.shape)\n",
-    "repeated_tensor = output_tensor.unsqueeze(1).repeat(1, 8, 1) # repetition of the labeles accross the 8 stations\n",
+    "repeated_tensor = output_tensor.unsqueeze(1).repeat(1, 8, 1) # repetition of the labels accross the 8 stations\n",
     "print(\"after repetition\", repeated_tensor.shape)"
    ]
   },
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, the label tensor for class 3 results in:"
+    "For example, the label tensor for class 1 (VT) results in:"
    ]
   },
   {
