continuous detection demo

--- a/examples/patch_stacking_demo.ipynb
+++ b/examples/patch_stacking_demo.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
    ],
    "source": [
     "input_tensor = tensor(padded_input_signal)\n",
-    "folded_input = data_utils.fold_X(input_tensor, N=256)\n",
+    "folded_input = data_utils.patch_stacking_X(input_tensor, N=256)\n",
     "print(\"folded_input shape: \", folded_input.shape)\n",
     "plt.imshow(folded_input[0].numpy(), cmap='Greys_r', interpolation='nearest')\n",
     "plt.show()"
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Text(0.5, 0, 'Samples')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "folded_targets = data_utils.fold_y(output_tensor)\n",
+    "folded_targets = data_utils.patch_stacking_y(output_tensor)\n",
     "print(folded_targets.shape)"
    ]
   },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
