added event launcher

--- a/examples/window_level_demo.ipynb
+++ b/examples/window_level_demo.ipynb
@@ -38,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Camilo\\Volcanes_UFRO\\PAPER IEEE\\repo\\.repo_venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "d:\\Camilo\\Volcanes_UFRO\\PAPER IEEE\\repo\\.repo_venv\\Lib\\site-packages\\timm\\models\\layers\\__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
-      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Go up one level from 'examples' and point to 'utils' folder\n",
     "utils_path = os.path.abspath(os.path.join(os.getcwd(), os.pardir, 'utils'))\n",
@@ -75,35 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "architectures = [\"UNet\", \"UNetPlusPlus\", \"DeepLabV3\", \"SwinUNet\", \"PhaseNet\"]\n",
+    "parameters = []\n",
+    "for arch in architectures:\n",
+    "    for N in [64, 128, 256]:\n",
+    "        device = \"cuda\" if cuda.is_available() == True else \"cpu\"\n",
+    "        model = model_utils.model_selector(arch=arch, N=N, pretrained=False).to(device)\n",
+    "        parameters.append([arch, N, np.round(model_utils.return_trainable_parameters(model)/1000000,2)])\n",
+    "del model\n",
+    "parameters = pd.DataFrame(parameters,columns=[\"arch\", \"N\", \"Million parameters\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SwinTransformerSys expand initial----depths:[2, 2, 2, 2];depths_decoder:[1, 2, 2, 2];drop_path_rate:0.1;num_classes:6\n",
-      "---final upsample expand_first---\n",
-      "SwinTransformerSys expand initial----depths:[2, 2, 2, 2];depths_decoder:[1, 2, 2, 2];drop_path_rate:0.1;num_classes:6\n",
-      "---final upsample expand_first---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Camilo\\Volcanes_UFRO\\PAPER IEEE\\repo\\.repo_venv\\Lib\\site-packages\\torch\\functional.py:539: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3638.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SwinTransformerSys expand initial----depths:[2, 2, 2, 2];depths_decoder:[1, 2, 2, 2];drop_path_rate:0.1;num_classes:6\n",
-      "---final upsample expand_first---\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -244,21 +224,12 @@
        "14      PhaseNet  256                4.28"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "architectures = [\"UNet\", \"UNetPlusPlus\", \"DeepLabV3\", \"SwinUNet\", \"PhaseNet\"]\n",
-    "parameters = []\n",
-    "for arch in architectures:\n",
-    "    for N in [64, 128, 256]:\n",
-    "        device = \"cuda\" if cuda.is_available() == True else \"cpu\"\n",
-    "        model = model_utils.model_selector(arch=arch, N=N, pretrained=False).to(device)\n",
-    "        parameters.append([arch, N, np.round(model_utils.return_trainable_parameters(model)/1000000,2)])\n",
-    "del model\n",
-    "parameters = pd.DataFrame(parameters,columns=[\"arch\", \"N\", \"Million parameters\"])\n",
     "parameters.head(15)"
    ]
   },
@@ -271,7 +242,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UNet.pt Already downloaded\n",
+      "Downloading weights from 10.5281/zenodo.15098817\n",
+      "Downloaded UNet.pt\n",
       "Loading weights...\n"
      ]
     }
@@ -751,10 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Detected events are then post-processed by merging same-class events separated by less than class specific threshold:\n",
-    "VT: 3 s, LP: 5 s, TR: 15 s, AV: 4 s, and IC: 1 s\n",
-    "\n",
-    "and discarding detections that do not fall into the limits estimated from the 24,493 labeled windows:\n",
+    "Detected events are then post-processed by merging same-class events separated by less than 2.5 seconds and discarding detections that do not fall into the limits estimated from the 24,493 labeled windows:\n",
     "\n",
     "VT: 6–90 s, LP: 10–80 s, TR: $\\ge$ 55 s, AV: 11–100 s, and IC: 3–16 s."
    ]
@@ -797,14 +766,23 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4801</td>\n",
-       "      <td>5540</td>\n",
+       "      <td>4918</td>\n",
        "      <td>TR</td>\n",
        "      <td>AV</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>5485</td>\n",
+       "      <td>5540</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>AV</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>5829</td>\n",
        "      <td>7364</td>\n",
        "      <td>VT</td>\n",
@@ -818,8 +796,9 @@
       ],
       "text/plain": [
        "   idx_start  idx_end pred_label second_pred_label  conf_1  conf_2\n",
-       "0       4801     5540         TR                AV    93.0     6.0\n",
-       "1       5829     7364         VT                AV    58.0    28.0"
+       "0       4801     4918         TR                AV   100.0     0.0\n",
+       "1       5485     5540         TR                AV    86.0     6.0\n",
+       "2       5829     7364         VT                AV    58.0    28.0"
       ]
      },
      "execution_count": 16,
@@ -837,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -897,11 +876,11 @@
    ],
    "source": [
     "bounds = {\n",
-    "    \"VT\": (500, 3000),\n",
-    "    \"LP\": (800, 8000),\n",
-    "    \"TR\": (2000, 999990),\n",
-    "    \"AV\": (700, 10000),\n",
-    "    \"IC\": (200, 1500),\n",
+    "    \"VT\": (600,   9000),\n",
+    "    \"LP\": (1000,  8000),\n",
+    "    \"TR\": (5500,  9999999),\n",
+    "    \"AV\": (1100,  10000),\n",
+    "    \"IC\": (300,   1600),\n",
     "}\n",
     "\n",
     "merged_detections[\"duration\"] = (\n",
@@ -927,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Post-processing easily results in a clean prediction, which we can show through the *plot_window_with_act_onehot_and_uncertainty()* function. Note that reference is shown as a darker colored rectangle below the signal and detected events are shown as a lighter colored rectangle on top of it. Although detection is the same accross all stations we plot them at each one for ease of visualization."
+    "Resulting predictions we can show through the *plot_window_with_act_onehot_and_uncertainty()* function. Note that reference is shown as a darker colored rectangle below the signal and detected events are shown as a lighter colored rectangle on top of it. Although detection is the same accross all stations we plot them at each one for ease of visualization."
    ]
   },
   {
