--- a/examples/continuous_detection_demo.ipynb
+++ b/examples/continuous_detection_demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "c653cd45",
    "metadata": {},
    "outputs": [],
@@ -44,19 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "42bcbde0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Camilo\\Volcanes_UFRO\\PAPER IEEE\\repo\\.repo_venv\\Lib\\site-packages\\timm\\models\\layers\\__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
-      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Go up one level from 'examples' and point to 'utils' folder\n",
     "utils_path = os.path.abspath(os.path.join(os.getcwd(), os.pardir, 'utils'))\n",
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "404518fc",
    "metadata": {},
    "outputs": [
@@ -108,37 +99,58 @@
    "source": [
     "### Load continuous trace\n",
     "\n",
-    "Data can be downloaded from [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15384923.svg)](https://doi.org/10.5281/zenodo.15384923):"
+    "Data can be downloaded from [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15384890.svg)](https://doi.org/10.5281/zenodo.15384890):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "eff6f860",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# doi = \"10.5281/zenodo.15384923\"\n",
-    "# record_id = doi.split(\".\")[-1]\n",
-    "# metadata_url = f\"https://zenodo.org/api/records/{record_id}\"\n",
-    "# response = requests.get(metadata_url)\n",
-    "# metadata = response.json()\n",
-    "# files = metadata[\"files\"]\n",
-    "# file_to_download = files[2]  # 0: NVCh_10h_continuous_trace.zip - https://zenodo.org/api/records/15384923/files/NVCh_10h_continuous_trace.zip/content\n",
-    "# file_url = file_to_download[\"links\"][\"download\"]\n",
-    "# filename = file_to_download[\"key\"] \n",
-    "# response = requests.get(file_url, stream=True)\n",
+    "doi = \"10.5281/zenodo.15384890\"\n",
+    "record_id = doi.split(\".\")[-1]\n",
+    "metadata_url = f\"https://zenodo.org/api/records/{record_id}\"\n",
+    "response = requests.get(metadata_url)\n",
+    "metadata = response.json()\n",
+    "files = metadata[\"files\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "55f04300",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NVCh_10h_continuous_trace.zip\n",
+      "Downloaded NVCh_10h_continuous_trace.zip\n",
+      "Extracting files...\n",
+      "Files extracted\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_to_download = files[0]  # 0: NVCh_10h_continuous_trace.zip - https://zenodo.org/api/records/15384890/files/NVCh_10h_continuous_trace.zip/content\n",
+    "print(file_to_download[\"key\"] )\n",
+    "file_url = file_to_download[\"links\"][\"self\"]\n",
+    "filename = file_to_download[\"key\"] \n",
+    "response = requests.get(file_url, stream=True)\n",
     "\n",
-    "# with open(filename, \"wb\") as f:\n",
-    "#     for chunk in response.iter_content(chunk_size=8192):\n",
-    "#         f.write(chunk)\n",
-    "# print(f\"Downloaded {filename}\")\n",
+    "with open(filename, \"wb\") as f:\n",
+    "    for chunk in response.iter_content(chunk_size=8192):\n",
+    "        f.write(chunk)\n",
+    "print(f\"Downloaded {filename}\")\n",
     "\n",
-    "# print(f\"Extracting files...\")\n",
+    "print(f\"Extracting files...\")\n",
     "\n",
-    "# with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
-    "#     zip_ref.extractall(os.getcwd())  # or use a specific path\n",
-    "# print(f\"Files extracted\")"
+    "with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(os.getcwd())  # or use a specific path\n",
+    "print(f\"Files extracted\")"
    ]
   },
   {
@@ -151,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "04ae10f1",
    "metadata": {},
    "outputs": [],
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "f1bec412",
    "metadata": {},
    "outputs": [
@@ -177,7 +189,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "4d682e69",
    "metadata": {},
    "outputs": [],
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "b8c77bb2",
    "metadata": {},
    "outputs": [
@@ -229,8 +241,8 @@
       "windows processed: 312 / 523\n",
       "windows processed: 416 / 523\n",
       "windows processed: 520 / 523\n",
-      "CPU times: total: 12.5 s\n",
-      "Wall time: 2.36 s\n"
+      "CPU times: total: 11.7 s\n",
+      "Wall time: 2.57 s\n"
      ]
     }
    ],
@@ -264,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "3bce523d",
    "metadata": {},
    "outputs": [],
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "0fe587e4",
    "metadata": {},
    "outputs": [
@@ -470,7 +482,7 @@
        "[2283 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "f4474222",
    "metadata": {},
    "outputs": [
@@ -667,7 +679,7 @@
        "[636 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "9a76eaca",
    "metadata": {},
    "outputs": [
@@ -849,7 +861,7 @@
        "[330 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +911,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20f9d8e7eaac4c31bef1cc8f51a090fc",
+       "model_id": "44b582e7057d421cac30703b3bf03c28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -913,7 +925,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5eed52aab674f33b709d851f900d4aa",
+       "model_id": "d2fb36f668db4134952e196fa1e86d54",
        "version_major": 2,
        "version_minor": 0
       },
