--- a/examples/explore_data.ipynb
+++ b/examples/explore_data.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "### Plot the trace (8 channels) with its corresponding -true- segmentation\n",
-    "Notice that the \"BG\" class indicates the presence of an event (when 0) or not (when 1). Only the corresponding class of the event is activated (value of 1) when the event is present, and turns back to 0 when it is no longer there."
+    "Notice that the reference labels work in a way that the \"BG\" class indicates the presence of an event (when 0) or not (when 1). Only the corresponding class of the event is activated (value of 1) when the event is present, and turns back to 0 when it is no longer there."
    ]
   },
   {
