--- a/examples/continuous_detection_demo.ipynb
+++ b/examples/continuous_detection_demo.ipynb
@@ -887,7 +887,7 @@
    "id": "51499b34",
    "metadata": {},
    "source": [
-    "Resulting predictions we can show through the *launch_event_viewer()* function. Note that reference is shown as a darker colored rectangle below the signal and detected events are shown as a lighter colored rectangle on top of it. Although detection is the same accross all stations we plot them at each one for ease of visualization."
+    "Resulting predictions are shown through the *launch_event_viewer()* function. Note that reference is shown as a darker colored rectangle below the signal and detected events are shown as a lighter colored rectangle on top of it. Although detection is the same accross all stations we plot them at each one for ease of visualization."
    ]
   },
   {
