--- a/examples/patch_stacking_demo.ipynb
+++ b/examples/patch_stacking_demo.ipynb
@@ -132,9 +132,9 @@
     "\n",
     "$\\mathbf{X}\\in[-1,1]^{S\\times W}$\n",
     "\n",
-    "Where $X=8191$ samples and $S=8$ stations, meaning we have an 8x8192 array, which represents 8 stations sampled at 100Hz for a window of 81.92 seconds. \n",
+    "Where $W=8191$ samples and $S=8$ stations, meaning we have an 8x8192 array, which represents 8 stations sampled at 100Hz for a window of 81.92 seconds. \n",
     "\n",
-    "The specifity of this duration is explained in the article and stems from the need to produce a 2D representation NxN so that $N=256=\\sqrt{8\\times 8192}$. Notice that if the original window is not exactly 8192 samples long, we can pad it to match the size (class padding is 0 for all the classes but the BG class, where it is 1).\n",
+    "The specifity of this duration is explained in the article and stems from the need to produce a 2D representation if shape $N\\times N$ so that $N=256=\\sqrt{8\\times 8192}$. Notice that if the original window is not exactly 8192 samples long, we can pad it to match the size (class padding is 0 for all the classes but the BG class, where it is 1).\n",
     "\n"
    ]
   },
