--- a/examples/continuous_detection_demo.ipynb
+++ b/examples/continuous_detection_demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "c653cd45",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "42bcbde0",
    "metadata": {},
    "outputs": [],
@@ -99,17 +99,17 @@
    "source": [
     "### Load continuous trace\n",
     "\n",
-    "Data can be downloaded from [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15384890.svg)](https://doi.org/10.5281/zenodo.15384890):"
+    "Data can be downloaded from [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.17163020.svg)](https://doi.org/10.5281/zenodo.17163020):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "eff6f860",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doi = \"10.5281/zenodo.15384890\"\n",
+    "doi = \"10.5281/zenodo.17163020\"\n",
     "record_id = doi.split(\".\")[-1]\n",
     "metadata_url = f\"https://zenodo.org/api/records/{record_id}\"\n",
     "response = requests.get(metadata_url)\n",
@@ -119,12 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "55f04300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NVCh_10h_continuous_trace.zip\n",
+      "Downloaded NVCh_10h_continuous_trace.zip\n",
+      "Extracting files...\n",
+      "Files extracted\n"
+     ]
+    }
+   ],
    "source": [
-    "file_to_download = files[0]  # 0: NVCh_10h_continuous_trace.zip - https://zenodo.org/api/records/15384890/files/NVCh_10h_continuous_trace.zip/content\n",
+    "file_to_download = files[4]  # 0: NVCh_10h_continuous_trace.zip - https://zenodo.org/api/records/17163020/files/NVCh_10h_continuous_trace.zip/content\n",
     "print(file_to_download[\"key\"] )\n",
     "file_url = file_to_download[\"links\"][\"self\"]\n",
     "filename = file_to_download[\"key\"] \n",
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "04ae10f1",
    "metadata": {},
    "outputs": [],
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "f1bec412",
    "metadata": {},
    "outputs": [
@@ -170,15 +181,15 @@
      "data": {
       "text/plain": [
        "event_type\n",
-       "LP    49\n",
-       "IC    37\n",
-       "TR    28\n",
-       "VT    28\n",
-       "AV    20\n",
+       "LP    55\n",
+       "IC    51\n",
+       "TR    38\n",
+       "VT    38\n",
+       "AV    23\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
